[WebGPU] CTS validation/render_pipeline/multisample_state.html is failing https://bugs.webkit.org/show_bug.cgi?id=266735 <radar://119958299>

Reviewed by Tadeu Zagallo.

Add validation for multisample_state along with passing expectations.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/render_pipeline/multisample_state-expected.txt:
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::Device::createRenderPipeline):

Canonical link: https://commits.webkit.org/272622@main